test/error/MethodBaseNoBase.fu
public static class Test
{
	public static bool Run()
	{
		return base.Foo(); //ERROR: No base class
	}
}
